--- a/src/app/pages/nec/bulk/modals/submit-for-processing/submit-for-processing.component.scss
+++ b/src/app/pages/nec/bulk/modals/submit-for-processing/submit-for-processing.component.scss
@@ -6,10 +6,15 @@
     max-height: 500px;
     border-radius: 10px;
   }
-  nb-card nb-card-body button {
-    width: 200px;
-    margin: 10px;
-    display: inline;
+  nb-card nb-card-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    button {
+      width: 200px;
+      margin: 10px;
+      display: inline;
+    }
   }
 
   ::ng-deep .form {
